--- a/main/templates/checkout.html
+++ b/main/templates/checkout.html
@@ -42,4 +42,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<a href="{% url 'home' %}" class="btn btn-outline-dark ms-2">Повернутися на головну</a>
 </html>
