--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,4 +7,5 @@
   {{ form.as_p }}
   <button type="submit" class="btn btn-primary">Увійти</button>
 </form>
+<a href="{% url 'register' %}" class="btn btn-outline-dark ms-2">Зареєструватися</a>
 {% endblock %}
