--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -7,4 +7,5 @@
   {{ form.as_p }}
   <button type="submit" class="btn btn-primary">Зареєструватися</button>
 </form>
+<a href="{% url 'login' %}" class="btn btn-outline-dark ms-2">Увійти якщо вже є акаунт</a>
 {% endblock %}
